force-app/main/default/objects/Stock__c/fields/STORAGE_START_DATE__c.field-meta.xml
<CustomField>
    <fullName>STORAGE_START_DATE__c</fullName>
    <label>STORAGE_START_DATE</label>
    <type>DateTime</type>
</CustomField>