force-app/main/default/objects/Stock__c/fields/STORAGE_STOP_DATE__c.field-meta.xml
<CustomField>
    <fullName>STORAGE_STOP_DATE__c</fullName>
    <label>STORAGE_STOP_DATE</label>
    <type>DateTime</type>
</CustomField>