force-app/main/default/objects/Stock__c/fields/TestToday__c.field-meta.xml
<CustomField>
    <fullName>TestToday__c</fullName>
    <formula>DATETIMEVALUE(Today())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TestToday</label>
    <type>DateTime</type>
</CustomField>