force-app/main/default/objects/Stock__c/fields/TimeBetweenPickandDelivery__c.field-meta.xml
<CustomField>
    <fullName>TimeBetweenPickandDelivery__c</fullName>
    <formula>BuyerPickupDateTime__c - BuyerDeliveryDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TimeBetweenPickandDelivery</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>