force-app/main/default/objects/Stock__c/fields/TITLE_CERTIFICATE_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>TITLE_CERTIFICATE_NUMBER__c</fullName>
    <label>TITLE_CERTIFICATE_NUMBER</label>
    <length>100</length>
    <type>Text</type>
</CustomField>