force-app/main/default/objects/Stock__c/fields/TITLE_REC_FROM_SALVAGE_PROVIDER_DATETIME__c.field-meta.xml
<CustomField>
    <fullName>TITLE_REC_FROM_SALVAGE_PROVIDER_DATETIME__c</fullName>
    <label>TITLE_REC_FROM_SALVAGE_PROVIDER_DATETIME</label>
    <type>DateTime</type>
</CustomField>