force-app/main/default/objects/Stock__c/fields/TITLE_SENT_TO_DMV_DATETIME__c.field-meta.xml
<CustomField>
    <fullName>TITLE_SENT_TO_DMV_DATETIME__c</fullName>
    <label>TITLE_SENT_TO_DMV_DATETIME</label>
    <type>DateTime</type>
</CustomField>