force-app/main/default/objects/Stock__c/fields/TITLE_STATE__c.field-meta.xml
<CustomField>
    <fullName>TITLE_STATE__c</fullName>
    <label>TITLE_STATE</label>
    <length>5</length>
    <type>Text</type>
</CustomField>