force-app/main/default/objects/Stock__c/fields/TITLE_TYPE__c.field-meta.xml
<CustomField>
    <fullName>TITLE_TYPE__c</fullName>
    <label>TITLE_TYPE</label>
    <length>30</length>
    <type>Text</type>
</CustomField>