force-app/main/default/objects/Stock__c/fields/TOTAL_ADVANCE_CHARGES__c.field-meta.xml
<CustomField>
    <fullName>TOTAL_ADVANCE_CHARGES__c</fullName>
    <label>TOTAL_ADVANCE_CHARGES</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>