force-app/main/default/objects/Stock__c/fields/TOWER_IMAGES_AVAILABLE_DATETIME__c.field-meta.xml
<CustomField>
    <fullName>TOWER_IMAGES_AVAILABLE_DATETIME__c</fullName>
    <label>TOWER_IMAGES_AVAILABLE_DATETIME</label>
    <type>DateTime</type>
</CustomField>