force-app/main/default/objects/Stock__c/fields/TowerName__c.field-meta.xml
<CustomField>
    <fullName>TowerName__c</fullName>
    <label>TowerName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>