force-app/main/default/objects/Stock__c/fields/TRAN_ID__c.field-meta.xml
<CustomField>
    <fullName>TRAN_ID__c</fullName>
    <label>TRAN_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>