force-app/main/default/objects/Stock__c/fields/UpdateBy_Process_Builder__c.field-meta.xml
<CustomField>
    <fullName>UpdateBy_Process_Builder__c</fullName>
    <label>UpdateBy Process Builder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>