force-app/main/default/objects/Stock__c/fields/UPDATED_ADVANCE_CHG_MAX_AUTHORIZED_AMOUN__c.field-meta.xml
<CustomField>
    <fullName>UPDATED_ADVANCE_CHG_MAX_AUTHORIZED_AMOUN__c</fullName>
    <label>UPDATED_ADVANCE_CHG_MAX_AUTHORIZED_AMOUN</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>