force-app/main/default/objects/Stock__c/fields/UPDATED_ADVANCE_CHG_MAX_AUTHORIZED_BY__c.field-meta.xml
<CustomField>
    <fullName>UPDATED_ADVANCE_CHG_MAX_AUTHORIZED_BY__c</fullName>
    <label>UPDATED_ADVANCE_CHG_MAX_AUTHORIZED_BY</label>
    <length>50</length>
    <type>Text</type>
</CustomField>