force-app/main/default/objects/Stock__c/fields/UPDATED_ADVANCE_CHG_MAX_AUTHORIZED_DATE__c.field-meta.xml
<CustomField>
    <fullName>UPDATED_ADVANCE_CHG_MAX_AUTHORIZED_DATE__c</fullName>
    <label>UPDATED_ADVANCE_CHG__MAX_AUTHORIZED_DATE</label>
    <type>DateTime</type>
</CustomField>