force-app/main/default/objects/Stock__c/fields/VEHICLE_ENHANCED__c.field-meta.xml
<CustomField>
    <fullName>VEHICLE_ENHANCED__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VEHICLE_ENHANCED</label>
    <type>Checkbox</type>
</CustomField>