force-app/main/default/objects/Stock__c/fields/VEHICLE_IMAGES_AVAILABLE_DATETIME__c.field-meta.xml
<CustomField>
    <fullName>VEHICLE_IMAGES_AVAILABLE_DATETIME__c</fullName>
    <label>VEHICLE_IMAGES_AVAILABLE_DATETIME</label>
    <type>DateTime</type>
</CustomField>