force-app/main/default/objects/Stock__c/fields/VEHICLE_INSPECTION_SERVICE__c.field-meta.xml
<CustomField>
    <fullName>VEHICLE_INSPECTION_SERVICE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VEHICLE_INSPECTION_SERVICE</label>
    <type>Checkbox</type>
</CustomField>