force-app/main/default/objects/Stock__c/fields/VEHICLE_INSPECTION_SERVICE_DESC__c.field-meta.xml
<CustomField>
    <fullName>VEHICLE_INSPECTION_SERVICE_DESC__c</fullName>
    <label>VEHICLE_INSPECTION_SERVICE_DESC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>