force-app/main/default/objects/Stock__c/fields/VEHICLE_ON_HOLD__c.field-meta.xml
<CustomField>
    <fullName>VEHICLE_ON_HOLD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VEHICLE_ON_HOLD</label>
    <type>Checkbox</type>
</CustomField>