force-app/main/default/objects/Stock__c/fields/Vehicle_Status__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Status__c</fullName>
    <description>Vehicle&apos;s process status. E.g., Wait Title Document or Release Problem.</description>
    <inlineHelpText>Vehicle&apos;s process status. E.g., Wait Title Document or Release Problem.</inlineHelpText>
    <label>Vehicle Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>