force-app/main/default/objects/Stock__c/fields/VEHICLE_TYPE__c.field-meta.xml
<CustomField>
    <fullName>VEHICLE_TYPE__c</fullName>
    <label>VEHICLE_TYPE</label>
    <length>30</length>
    <type>Text</type>
</CustomField>