force-app/main/default/objects/Stock__c/fields/VIN__c.field-meta.xml
<CustomField>
    <fullName>VIN__c</fullName>
    <description>Vehicle Identification Number</description>
    <inlineHelpText>Vehicle Identification Number</inlineHelpText>
    <label>VIN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>