force-app/main/default/objects/Stock__c/fields/WonorLostVehicle__c.field-meta.xml
<CustomField>
    <fullName>WonorLostVehicle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WonorLostVehicle</label>
    <type>Checkbox</type>
</CustomField>