force-app/main/default/objects/Stock__c/fields/X360_IMAGES_AVAILABLE_DATETIME__c.field-meta.xml
<CustomField>
    <fullName>X360_IMAGES_AVAILABLE_DATETIME__c</fullName>
    <label>360_IMAGES_AVAILABLE_DATETIME</label>
    <type>DateTime</type>
</CustomField>