force-app/main/default/objects/Stock__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>Year of the Vehicle</description>
    <inlineHelpText>Year of the Vehicle</inlineHelpText>
    <label>Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>