force-app/main/default/objects/Stock__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Stock__c</columns>
    <columns>Branch_Name__c</columns>
    <columns>Branch_number__c</columns>
    <columns>Buyer_ID__c</columns>
    <columns>Buyer_Name__c</columns>
    <columns>Provider_ID__c</columns>
    <columns>Provider_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>