force-app/main/default/objects/Stock__c/listViews/Pulsar_Motors_Assignments_Created_Today.listView-meta.xml
<ListView>
    <fullName>Pulsar_Motors_Assignments_Created_Today</fullName>
    <columns>NAME</columns>
    <columns>Vehicle_Status__c</columns>
    <columns>Branch_Name__c</columns>
    <columns>VIN__c</columns>
    <columns>Provider_Name__c</columns>
    <columns>Year__c</columns>
    <columns>Model__c</columns>
    <columns>Make__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Provider_Name__c</field>
        <operation>equals</operation>
        <value>Pulsar Motors</value>
    </filters>
    <label>Pulsar Motors Assignments Created Today</label>
</ListView>